[gd_scene load_steps=3 format=3 uid="uid://b7f266vf4gog1"]

[ext_resource type="Script" path="res://menus/phone/inventory_scene.gd" id="1_lt3nu"]
[ext_resource type="Texture2D" uid="uid://blf8frytq0uhb" path="res://temp_art/Salad.png" id="2_nx7y5"]

[node name="ScreenInventory" type="Panel"]
custom_minimum_size = Vector2(184, 297)
script = ExtResource("1_lt3nu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.960114, 0.740453, 0.926453, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SelectedBackground" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="SelectedItemIcon" type="TextureRect" parent="VBoxContainer/SelectedBackground"]
layout_mode = 0
offset_left = 8.80316
offset_top = 7.77771
offset_right = 67.8032
offset_bottom = 66.7777
texture = ExtResource("2_nx7y5")
expand_mode = 3

[node name="SelectedItemName" type="Label" parent="VBoxContainer/SelectedBackground"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 79.9999
offset_top = 7.0
offset_right = 160.0
offset_bottom = 30.0
text = "SALAD"

[node name="SelectedItemDescription" type="Label" parent="VBoxContainer/SelectedBackground"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 79.0386
offset_top = 30.294
offset_right = 167.039
offset_bottom = 68.294
theme_override_font_sizes/font_size = 10
text = "meowmeoomeowmo"
autowrap_mode = 1
clip_text = true

[node name="InventoryGrid" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
columns = 4

[node name="Panel" type="Panel" parent="VBoxContainer/InventoryGrid"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3

[connection signal="visibility_changed" from="." to="." method="on_app_toggle"]
